# pgpkg

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GITHUB_PYPI_SETUP.md  LICENSE  PROJECT_PLAN.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-pages.yml  publish-pypi.yml
docs/: api.md  architecture.md  cli.md  index.md  layout.md  quickstart.md  troubleshooting.md  wrapper.md
examples/sample_wrapper/: README.md  pyproject.toml
examples/sample_wrapper/src/sampleext_migrator/: __init__.py  cli.py  migrations.tar.zst
src/pgpkg/: __init__.py  _conn.py  api.py  artifact.py  catalog.py  cli.py  config.py  diff.py  errors.py  executor.py  layout.py  planner.py  staging.py  tracking.py  versioning.py  wrapper.py
tests/: conftest.py
tests/fixtures/sample_project/: pyproject.toml
tests/fixtures/sample_project/sql/: 010_schema.sql  020_functions.sql
tests/fixtures/sample_project/sql/post/: README.md
tests/fixtures/sample_project/sql/pre/: README.md
tests/integration/: test_diff.py  test_executor.py  test_tracking.py  test_wrapper_end_to_end.py
tests/unit/: test_artifact.py  test_catalog.py  test_cli.py  test_config.py  test_diff.py  test_layout.py  test_planner.py  test_staging.py  test_tracking.py  test_versioning.py  test_wrapper.py
