[project]
name = "pgpkg"
version = "0.1.0"
description = "PostgreSQL migration toolkit: stage versions, generate incrementals via results, apply with libpq."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "pgpkg contributors" }]
dependencies = [
    "packaging>=23.0",
    "psycopg[binary]>=3.1",
    "zstandard>=0.22",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
diff = ["results>=1.4"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "testcontainers[postgres]>=4.0",
    "results>=1.4",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "build>=1.2",
]

[project.scripts]
pgpkg = "pgpkg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgpkg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a live PostgreSQL via testcontainers (Docker required)",
]
addopts = "-ra"
