[project]
name = "pgpkg"
dynamic = ["version"]
description = "PostgreSQL migration toolkit: stage versions, generate incrementals via results, apply with libpq."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [{ name = "pgpkg contributors" }]
keywords = ["postgres", "postgresql", "migrations", "sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "packaging>=23.0",
    "psycopg[binary]>=3.1",
    "zstandard>=0.22",
    "tomli; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/bitner/pgpkg"
Repository = "https://github.com/bitner/pgpkg"
Documentation = "https://bitner.github.io/pgpkg/"
Issues = "https://github.com/bitner/pgpkg/issues"

[project.optional-dependencies]
diff = ["results>=1.4"]
dev = [
    "pre-commit>=4",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "testcontainers[postgres]>=4.0",
    "results>=1.4",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "build>=1.2",
    "twine>=6",
    "ty>=0.0.32",
]

[project.scripts]
pgpkg = "pgpkg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pgpkg/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pgpkg"]

[tool.hatch.build.targets.wheel.force-include]
"src/pgpkg/py.typed" = "pgpkg/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "/src/pgpkg",
    "/tests",
    "/docs",
    "/examples",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/mkdocs.yml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a live PostgreSQL via testcontainers (Docker required)",
]
addopts = "-ra --strict-markers"
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["src/pgpkg"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src", "tests"]
