[project]
name = "sampleext-migrator"
version = "0.0.1"
description = "Migration wrapper for sampleext"
requires-python = ">=3.11"
dependencies = [
    "pgpkg>=0.1",
]

[project.scripts]
sampleext-migrator = "sampleext_migrator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sampleext_migrator"]
